<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20px"
    tools:context=".Health_tips">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1. Eat a healthy diet"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/one" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2.Consume less salt and sugar"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/two" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3.Reduce intake of harmful fats"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/three"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4. Avoid harmful use of alcohol"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/four"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5.Don’t smoke"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/five"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="6.Be active"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/six"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="7.Check your blood pressure regularly"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/seven"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="8.Get tested"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/eight"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="9.Get vaccinated"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/nine"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="11.Cover your mouth when coughing or sneezing"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/eleven"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/eleven"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12.Prevent mosquito bites"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/twelve"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/twelve"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="13.Follow traffic laws"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/thirteen"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/thirteen"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="14.Drink only safe water"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/fourteen"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/fourteen"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="17.Take antibiotics only as prescribed"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/seventeen"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/seventeen"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="18.Clean your hands properly"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/eighteen"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/eighteen"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:backgroundTint="@color/black"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="19.Prepare your food correctly"
                android:textColor="@color/black"
                android:textSize="22dp">

            </TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/nineteen"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:paddingTop="10px"
                android:text="@string/nineteen"
                android:textColor="@color/black"
                android:textSize="14dp">

            </TextView>

        </LinearLayout>
        <Button
            android:id="@+id/readmoreTipsId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Read More">

        </Button>



    </LinearLayout>

</ScrollView>